--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
       <section id="todo-container">
-          <input type="text" name="taskInput" id="taskInput" placeholder="Ajouter une tâche..."> 
+          <input type="text" name="taskInput" id="taskInput" placeholder="Ajouter une tâche..."> <br><br> 
           <button id="addTask">Ajouter</button>
           <ul id="taskList"></ul>
       </section>
